# training

./: .gitignore  README.md  memo_new_env.md
AndroidStudioProjects/: 命名規則.txt  設定テンプレート.txt
AndroidStudioProjects/Janken/: settings.gradle.kts
Node/: package-lock.json  package.json  tsconfig.json
claude/: game.js  index.html
java/: test.java
js/: main.js
python/: .gitignore  paizaメモ_エンジニア騎士A.txt  test.py
python/DjangoEnv/: README.md  pyproject.toml  requirements.txt
python/DjangoEnv/django_tutorial/django_tutorial/: settings.py  urls.py
python/DjangoEnv/django_tutorial/tutorial/: urls.py
python/DjangoEnv/private_diary/accounts/: models.py  tests.py
python/DjangoEnv/private_diary/accounts/migrations/: 0001_initial.py
python/DjangoEnv/private_diary/diary/: forms.py  models.py  urls.py  views.py
python/DjangoEnv/private_diary/diary/management/commands/: backup_diary.py
python/DjangoEnv/private_diary/diary/migrations/: 0001_initial.py
python/DjangoEnv/private_diary/diary/templates/: base.html  diary_delete.html  diary_detail.html  diary_list.html  diary_update.html  index.html  inquiry.html
python/DjangoEnv/private_diary/diary/tests/: test_views.py
python/DjangoEnv/private_diary/private_diary/: asgi.py  settings.py  settings_common.py  settings_dev.py  urls.py  wsgi.py
python/DjangoEnv/study_quiz/: manage.py
python/DjangoEnv/study_quiz/study_quiz/: asgi.py  settings.py  urls.py  wsgi.py
react-tutorial/: package-lock.json  package.json  vite.config.js
workspace/: DjangoEnv.code-workspace  Node.code-workspace  trainingEnv.code-workspace
(+891 files in other folders)
