[project]
name = "djangoenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "django-allauth>=65.18.0",
    "django-bootstrap5>=26.2",
    "django-ses>=4.7.2",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "selenium>=4.46.0",
]
